--- a/config_(1.8).yml
+++ b/config_(1.8).yml
@@ -130,6 +130,7 @@ language-section:
   sign-creation: "&eYou have created a HyperDrive sign. Please interact with it to ensure you have provided correct information."
   sign-action-invalid: "&cLine &e2 &con this sign is incorrect. Please make sure the action is &eWarp&c, &eRtp&c, &eGroup Warp&c, or &eGroup Rtp&c."
   sign-warp-invalid: "&cThe warp on the sign is invalid. Please change it to a valid warp."
+  mysql-disabled: "&cIt seems the MySQL database is currently disabled. Unable to perform this task."
 
 # Here is where the MySQL connection can be configured.
 # (Note: Database tables are created and managed automatically. There is also no MySQL conversion to YAML file; therefore, use at your own risk.)
@@ -375,12 +376,10 @@ list-menu-section:
   # These are the slots that will be filled with warps from each page. To have this menu contain no warps, make sure this list is empty.
   # (Note: This list must only contain slots that are logical with the size value above.)
   warp-slots: [10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 22, 23, 24, 25, 28, 29, 30, 31, 32, 33, 34]
-  # This is the default filter status the filter will start on. (Available Indexes: [0 (Public), 1 (Private), 2 (Admin), 3 (Owned), 4 (Everything)])
+  # This is the default filter status the filter will start on. (Available Indexes: [0 (Public), 1 (Private), 2 (Admin), 3 (Owned)])
   default-filter-index: 0
   # This is the format that replaces the second to final status in the filter-switch, which only loads warps that are owned by the player.
   own-status-format: "Assisted or Owned"
-  # This is the format that replaces the final status in the filter-switch, which loads all warps.
-  everything-status-format: "Everything"
   # This is the format that replaces the first status in the filter-switch, which only loads warps with the 'Public' status.
   public-status-format: "Public"
   # This is the format that replaces the second status in the filter-switch, which only loads warps with the 'Private' status.
