--- a/config_(1.9-1.12).yml
+++ b/config_(1.9-1.12).yml
@@ -206,6 +206,9 @@ filter-section:
 
 # Here is where everything related to teleportation can be customize.
 teleportation-section:
+  # If the player teleports while in a vehicle should they be dismounted and teleported?
+  # (Note: The mount will be teleported as well, but half a second after to prevent faulty chunk loading)
+  teleport-vehicles: false
   # This is the duration of how long a TPA request will stay alive. After the duration the request can no longer be accepted or denied.
   teleport-ask-duration: 10
   # This is the duration of how long a group request will stay alive. After the duration the request can no longer be accepted or denied.
