► Fix ► - fixed an issue where Yaw an Pitch were not saving for warps.
► Addition ► - added the configuration auto-updater and manager MK. 1. This feature will be improved, but you no longer have to worry about missing or invalid keys.

► Update ► - added the new warp traffic feature alongside a new placeholder for the warp icons "{traffic}".

► Addition ► - added the configuration auto-updater and manager MK. 1. This feature will be improved, but you no longer have to worry about missing or invalid keys.

Signed-off-by: XZot1K <alexosborne54@gmail.com>

--- a/config_(1.13).yml
+++ b/config_(1.13).yml
@@ -315,6 +315,8 @@ warp-icon-section:
   # Current Placeholders:
   # {description} - replaces the line with the first description line while adding the remaining lines below it.
   # {status} - replaced with the warp's current status.
+  # {usage-price} - replaced with the warp's usage price.
+  # {traffic} - replaced with the warp's traffic count.
   # {creation-date} - replaced with the warp's creation date.
   # {owner} - replaced with the warp owner's name.
   # {assistant-count}- replaced with warp's assistants count.
@@ -356,6 +358,7 @@ warp-icon-section:
     - "&7Owner: &e{owner}"
     - "&7Whitelist Count: &e{whitelist-count}"
     - "&7Assistant Count: &e{assistant-count}"
+    - "&7Warp Traffic/Popularity: &e{traffic}"
     - ""
     - "&e&l&m----------------------------"
 
