--- a/config_(1.14).yml
+++ b/config_(1.14).yml
@@ -223,14 +223,6 @@ teleportation-section:
   move-cancellation: true
   # This is the duration the player must wait before engaging teleportation (In seconds).
   warp-delay-duration: 10
-  # This is the animation that is displayed when the player is successfully teleported through a standalone teleportation command such as /TP or /TPO.
-  # (Format: <type>:<effect>) Particle effects can be found here: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
-  # The current types are: [CONE, HELIX, CIRCLE, VORTEX, RING]
-  standalone-teleport-animation: "CIRCLE:SMOKE_NORMAL"
-  # This is the animation that is displayed for each player involved in a group teleport after the teleportation is complete. (Format: <type>:<effect>)
-  # Particle effects can be found here: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
-  # The current types are: [CONE, HELIX, CIRCLE, VORTEX, RING]
-  group-teleport-animation: "CIRCLE:SMOKE_NORMAL"
   # These are the title and sub-title that are sent to the player after they are teleported (Note: Set to "" to disable).
   teleport-title: "&eYou have been teleported"
   teleport-sub-title: "&eto the &a{warp} &ewarp."
@@ -264,14 +256,10 @@ random-teleport-section:
     - "world_the_end:0,0,0"
   # This is the bound radius that a player can be teleported within. You can think of this as like a world border.
   # (Note: It is recommended to set this value to the size of your world's world border)
-  bounds-radius: 1000
+  bounds-radius: 5000
   # This is how many times the random teleportation feature can attempt to teleport the player before aborting the task.
   # (Note: The higher the slower, recommended value is below 30 if "can-load-chunks" is enabled, set to -1 for unlimited)
-  max-tries: 100
-  # This is the animation that is displayed when the player is successfully randomly teleported. (Format: <type>:<effect>)
-  # Particle effects can be found here: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
-  # The current types are: [CONE, HELIX, CIRCLE, VORTEX, RING]
-  teleport-animation: "CIRCLE:SMOKE_NORMAL"
+  max-tries: 300
   # Materials in this list will be avoided while a player is undergoing random teleportation.
   # (Format: <material>:<durability>)
   forbidden-materials:
@@ -376,6 +364,18 @@ special-effects-section:
     - "&fFlash Backs:CONE/CLOUD:CIRCLE/SPELL_WITCH"
     - "&6Over Drive:VORTEX/SPELL_WITCH:CIRCLE/CLOUD"
     - "&cOddly Hot:RING/FLAME:CIRCLE/FLAME"
+  # This is the animation that is displayed when the player is successfully teleported through a standalone teleportation command such as /TP or /TPO.
+  # (Format: <type>:<effect>) Particle effects can be found here: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
+  # The current types are: [CONE, HELIX, CIRCLE, VORTEX, RING]
+  standalone-teleport-animation: "VORTEX:FIREWORKS_SPARK"
+  # This is the animation that is displayed for each player involved in a group teleport after the teleportation is complete. (Format: <type>:<effect>)
+  # Particle effects can be found here: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
+  # The current types are: [CONE, HELIX, CIRCLE, VORTEX, RING]
+  group-teleport-animation: "VORTEX:FIREWORKS_SPARK"
+  # This is the animation that is displayed when the player is successfully randomly teleported. (Format: <type>:<effect>)
+  # Particle effects can be found here: https://hub.spigotmc.org/javadocs/spigot/org/bukkit/Particle.html
+  # The current types are: [CONE, HELIX, CIRCLE, VORTEX, RING]
+  random-teleport-animation: "CIRCLE:SMOKE_NORMAL"
 
 # This is where the list menu can be fully customized.
 list-menu-section:
