--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: HyperDrive
-version: 5.0.3_SNAPSHOT
+version: 5.0.3
 api-version: 1.13
 author: XZot1K
 main: xzot1k.plugins.hd.HyperDrive
@@ -10,7 +10,7 @@ commands:
     default: op
   warps:
     default: op
-    description: Opens the warp list menu.
+    description: Opens the warp list menu.a
     aliases: [warp]
 
   # REMOVE THE COMMANDS BELOW TO DISABLE STANDALONE TELEPORTATION COMMANDS
