► Changes: ► * Reformatted code and modified some pieces for optimization. * The 'transfer' table in MySQL is no longer dropped on start, instead it is created then truncated.
► Bug Fixes: ►
* Fixed an issue with MC versions 1.8-1.13.2 since the older configurations didn't contain a newly added message.
* Adjusted the 'List Menu' builder method as it would completely shutdown if a Material was null, should skip over it now.

Signed-off-by: BuildTools <unconfigured@null.spigotmc.org>

--- a/config_(1.13).yml
+++ b/config_(1.13).yml
@@ -133,6 +133,7 @@ language-section:
   mysql-disabled: "&cIt seems the MySQL database is currently disabled. Unable to perform this task."
   warp-ip-invalid: "&cNo warps with the registered IP Address &e{ip} &cwere found."
   warp-ip-set: "&a{count} &ewarps have had their IP Addresses set to &a{set-ip} &efrom &a{initial-ip}&e."
+  ip-ping-fail: "&cUnable to warp to the warp &e{warp} &cbecause the IP Address &e{ip} &cis not responding."
   cross-teleported: "&eYou have been teleported to the server &a{server} &eat World: &a{world} &eX: &a{x}&e, Y: &a{y}&e, Z: &a{z}&e."
 
 # Here is where the MySQL connection can be configured.
