► Changes: ► * Changed how the cross-server warping checks are read. * Added the 'cross-server-warping' option to the MySQL section.
► Bug Fixes: ►
* Fixed the 1.9-1.12 configuration containing minor errors that were not correct values for the server version.
* Added the 'cross-server-warping' option to the MySQL section.

Signed-off-by: XZot1K <alexosborne54@gmail.com>

--- a/config_(1.13).yml
+++ b/config_(1.13).yml
@@ -141,6 +141,8 @@ language-section:
 mysql-connection:
   # If this option is enabled, HyperDrive will enable cross-server teleportation and MySQL warp saving/loading.
   use-mysql: false
+  # If this is enabled HyperDrive will attempt to allow cross-server warping (WARNING: All instances will load all warps to gain full control).
+  cross-server-warping: false
   # Below, define your MySQL information. THE DEFINED DATABASE MUST ALREADY EXIST.
   database-name: "hyperdrive"
   host: "localhost"
