► Changes: ► * Added the new "hyperdrive.tpdelaybypass" permission so players with the permission can bypass the warp delay. * Based all warp saving off the MySQL toggle in the configuration to prevent any confusion if for whatever reason the Connection does not return invalid.
► Bug Fixes: ►
* Fixed an issue where modifying a warp in any was causing the async task to fail and try to force the plugin to save. This could be vary well what some users have experienced that caused a form of warp overlapping.
* Fixed some similar async related tasks to prevent them from fails.

Signed-off-by: XZot1K <alexosborne54@gmail.com>

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: HyperDrive
-version: 5.0.8
+version: 5.0.8-C
 api-version: 1.13
 author: XZot1K
 main: xzot1k.plugins.hd.HyperDrive
@@ -90,6 +90,7 @@ permissions:
       hyperdrive.admin.edit: true
       hyperdrive.admin.rtp: true
       hyperdrive.tpcooldown: true
+      hyperdrive.tpdelaybypass: true
       hyperdrive.rtpbypass: true
       hyperdrive.admin.help: true
       hyperdrive.admin.warp: true
@@ -204,3 +205,6 @@ permissions:
   hyperdrive.updateid:
     default: op
     description: This permission node is used to allow any sender with the node to update warps with the initially defined IP to a new IP.
+  hyperdrive.tpdelaybypass:
+    default: op
+    description: This permission node is used to bypass the warp teleportation delay entirely.
